Read passwords from config file which are still using legacy "encryption".
svn path=/trunk/KDE/kdepim/mailtransport/; revision=620552

--- a/mailtransport/CMakeLists.txt
+++ b/mailtransport/CMakeLists.txt
@@ -13,6 +13,7 @@ set(mailtransport_lib_srcs
   sendmailjob.cpp
   smtpjob.cpp
   precommandjob.cpp
+  legacydecrypt.cpp
 )
 
 kde4_automoc(${mailtransport_lib_srcs})
