No implicit ascii casts, mostly harmless stuff but better be on the safe side.
svn path=/trunk/KDE/kdepim/mailtransport/; revision=620595

--- a/mailtransport/CMakeLists.txt
+++ b/mailtransport/CMakeLists.txt
@@ -2,6 +2,8 @@
 add_subdirectory( kconf_update )
 add_subdirectory( tests )
 
+add_definitions("-DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII")
+
 set(mailtransport_lib_srcs
   transport.cpp
   transportcombobox.cpp
