--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Calendar in Local File
+Name[el]=Ημερολόγιο σε τοπικό αρχείο
 Name[fr]=Calendrier dans un fichier local
 X-KDE-Library=kcal_local
 Type=Service
