--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KResources/Manager
 Comment=KResource Manager
+Comment[el]=Διαχειριστής KResource
 
 [PropertyDef::X-KDE-ResourceFamily]
 Type=QString
