Export the necessary ical functions when unit tests are enabled
svn path=/trunk/KDE/kdepimlibs/; revision=626177

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -4,6 +4,11 @@ configure_file(config-kcal.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-kcal.h )
 
 ADD_DEFINITIONS(-DPACKAGE_DATA_DIR=\\""${DATA_INSTALL_DIR}/libical"\\" ) # added manually
 
+if(KDE4_BUILD_TESTS)
+    # only with this definition will the KWORD_TEST_EXPORT macro do something
+    add_definitions(-DCOMPILING_TESTS)
+endif(KDE4_BUILD_TESTS)
+
 include_directories(
 	${CMAKE_SOURCE_DIR}/kcal/libical/src/libicalss/
 	${CMAKE_BINARY_DIR}/kcal/libical/src/libicalss/
