Use cmake macro
svn path=/trunk/KDE/kdepim/mailtransport/; revision=626830

--- a/mailtransport/CMakeLists.txt
+++ b/mailtransport/CMakeLists.txt
@@ -29,7 +29,7 @@ kde4_add_ui_files(mailtransport_lib_srcs
 kde4_add_kcfg_files(mailtransport_lib_srcs transportbase.kcfgc)
 
 kde4_add_library(mailtransport SHARED ${mailtransport_lib_srcs})
-target_link_libraries(mailtransport ${KDE4_KIO_LIBS} kwalletclient kdepim)
+target_link_libraries(mailtransport ${KDE4_KIO_LIBS} ${KDE4_KWALLETCLIENT_LIBS} kdepim)
 set_target_properties(mailtransport PROPERTIES VERSION 1.0.0 SOVERSION 1)
 
 install(TARGETS mailtransport DESTINATION ${LIB_INSTALL_DIR})
