The HAVE_GPGME checks in identity.h need a header file to define that...
svn path=/trunk/KDE/kdepim/libkpimidentities/; revision=627515

--- a/kpimidentities/CMakeLists.txt
+++ b/kpimidentities/CMakeLists.txt
@@ -1,3 +1,4 @@
+configure_file (config-libkpimidentities.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-libkpimidentities.h)
 
 if(GPGME_FOUND)
    include_directories( ${CMAKE_SOURCE_DIR}/libkleo  )
