SVN_SILENT: add a small comment for the next one trying to make this test work with msvc
svn path=/trunk/KDE/kdepimlibs/; revision=628320

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -120,6 +120,9 @@ target_link_libraries(testrecurrencetype  ${KDE4_KDECORE_LIBS} kcal )
 
 ########### next target ###############
 
+# this test cannot work with msvc because libical should not be altered
+# and therefore we can't add KCAL_EXPORT there
+# it should work fine with mingw because of the auto-import feature
 if(NOT MSVC)
   set(testicaltimezones_SRCS testicaltimezones.cpp
  )
