--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KResources/Plugin
 Comment=KResource Framework Plugin
+Comment[el]=Εφαρμογίδιο πλαισίου εργασίας του KResource
 
 [PropertyDef::X-KDE-ResourceFamily]
 Type=QString
