--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(kdepimlibs)
 
-set( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules )
+set( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules
+                       ${CMAKE_INSTALL_PREFIX}/share/apps/cmake/modules )
 
 # search packages used by KDE
 find_package(KDE4 REQUIRED)
