SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=639996

--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -3,6 +3,8 @@ Encoding=UTF-8
 Name=Calendar in Local Directory
 Name[el]=Ημερολόγιο σε τοπικό κατάλογο
 Name[fr]=Calendrier dans un dossier local
+Name[pa]=ਲੋਕਲ ਡਾਇਰੈਕਟਰੀ 'ਚ ਕੈਲੰਡਰ
+Name[x-test]=xxCalendar in Local Directoryxx
 X-KDE-Library=kcal_localdir
 Type=Service
 ServiceTypes=KResources/Plugin
