--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -3,6 +3,8 @@ Encoding=UTF-8
 Name=Calendar in Local File
 Name[el]=Ημερολόγιο σε τοπικό αρχείο
 Name[fr]=Calendrier dans un fichier local
+Name[pa]=ਲੋਕਲ ਫਾਇਲ 'ਚ ਕੈਲੰਡਰ
+Name[x-test]=xxCalendar in Local Filexx
 X-KDE-Library=kcal_local
 Type=Service
 ServiceTypes=KResources/Plugin
