--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -4,6 +4,7 @@ Type=ServiceType
 X-KDE-ServiceType=KResources/Manager
 Comment=KResource Manager
 Comment[el]=Διαχειριστής KResource
+Comment[ja]=K リソース・マネージャ
 Comment[pa]=ਕੇ-ਰੀਸੋਰਸ ਮੈਨੇਜਰ
 Comment[x-test]=xxKResource Managerxx
 
