--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -DHAVE_CONFIG_H=1)
 include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
 
 add_subdirectory(emailfunctions)
+add_subdirectory(kimap)
 add_subdirectory(kxmlrpcclient)
 add_subdirectory(kcal)
 add_subdirectory(ktnef)
