SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/mailtransport/; revision=641391

--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -13,4 +13,5 @@ X-KDE-ParentComponents=
 X-KDE-CfgDlgHierarchy=
 
 Name=Mail Transport
+Name[es]=Transporte de correo
 Name[x-test]=xxMail Transportxx
