rename testkimap to testrfccodecs, along with some CMakeLists.txt fixes
svn path=/trunk/KDE/kdepimlibs/; revision=641472

--- a/kimap/tests/CMakeLists.txt
+++ b/kimap/tests/CMakeLists.txt
@@ -1,19 +1,22 @@
 
 if(KDE4_BUILD_TESTS)
 
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/..   )
+# Tests don't need to go into toplevel/bin, they are fine in the current dir.
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
+
+include_directories( ${CMAKE_SOURCE_DIR}/kimap )
 
 ########### next target ###############
 
-set(testkimap_SRCS ${kimap_SRCS} testkimap.cpp )
+set(testrfccodecs_SRCS testrfccodecs.cpp )
 
-kde4_automoc(${testkimap_SRCS})
+kde4_automoc(${testrfccodecs_SRCS})
 
-kde4_add_executable(testkimap ${testkimap_SRCS})
+kde4_add_executable(testrfccodecs NOGUI RUN_UNINSTALLED ${testrfccodecs_SRCS})
 
-target_link_libraries(testkimap  ${KDE4_KDECORE_LIBS} kimap )
+target_link_libraries(testrfccodecs ${KDE4_KDECORE_LIBS} kimap ${QT_TEST_LIBRARY})
 
-add_test(kimap-testkimap ${EXECUTABLE_OUTPUT_PATH}/testkimap)
+add_test(kimap-testrfccodecs ${EXECUTABLE_OUTPUT_PATH}/testrfccodecs)
 
 ########### install files ###############
 
