--- a/kioslave/imap4/CMakeLists.txt
+++ b/kioslave/imap4/CMakeLists.txt
@@ -9,7 +9,6 @@ set(kio_imap4_PART_SRCS
    imaplist.cc 
    mailaddress.cc 
    mimeheader.cc 
-   rfcdecoder.cc 
    imap4.cc 
    imapinfo.cc 
    imapparser.cc 
@@ -21,7 +20,7 @@ kde4_automoc(${kio_imap4_PART_SRCS})
 
 kde4_add_plugin(kio_imap4 ${kio_imap4_PART_SRCS})
 
-target_link_libraries(kio_imap4  ${KDE4_KDE3SUPPORT_LIBS}  ${SASL2_LIBRARIES} ${KDE4_KMIME_LIBS})
+target_link_libraries(kio_imap4  ${KDE4_KDE3SUPPORT_LIBS}  ${SASL2_LIBRARIES} ${KDE4_KMIME_LIBS} kimap)
 
 install(TARGETS kio_imap4  DESTINATION ${PLUGIN_INSTALL_DIR})
 
